--- a/posts/3 -- 2023-05-28-tenia.md
+++ b/posts/3 -- 2023-05-28-tenia.md
@@ -7,7 +7,7 @@ definicao: Tipo de parasita intestinal, popularmente conhecido como solitaria.
 categoria: Saude
 percentual: 2350
 vezes_subida: 24.5
-data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)
+data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)
 categoria_trends: todas
 buscas_dia_semana: 
 url_youtube: 
@@ -24,7 +24,7 @@ url_foto_materia:
   "categoria": "Saude",
   "percentual": "2350",
   "vezes_subida": "24.5",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
