--- a/posts/3 -- 2023-05-28-terafins.md
+++ b/posts/3 -- 2023-05-28-terafins.md
@@ -7,7 +7,7 @@ definicao: Seres angelicais que, segundo algumas tradicoes religiosas, ocupam um
 categoria: Cultura
 percentual: 450
 vezes_subida: 5.5
-data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)
+data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)
 categoria_trends: todas
 buscas_dia_semana: 
 url_youtube: 
@@ -24,7 +24,7 @@ url_foto_materia:
   "categoria": "Cultura",
   "percentual": "450",
   "vezes_subida": "5.5",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
