Atualizar arquivo de post: furcula

--- a/posts/3 -- 2023-05-28-furcula.md
+++ b/posts/3 -- 2023-05-28-furcula.md
@@ -7,7 +7,7 @@ definicao: Estrutura ossea em forma de "V" encontrada em aves e repteis, tambem 
 categoria: Cultura
 percentual: 500
 vezes_subida: 6
-data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)
+data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)
 categoria_trends: ciencia
 buscas_dia_semana: 
 url_youtube: 
@@ -24,7 +24,7 @@ url_foto_materia:
   "categoria": "Cultura",
   "percentual": "500",
   "vezes_subida": "6",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "ciencia",
   "buscas_dia_semana": "",
   "url_youtube": "",
