Atualizar arquivo de post: capeba

--- a/posts/3 -- 2023-05-28-capeba.md
+++ b/posts/3 -- 2023-05-28-capeba.md
@@ -7,7 +7,7 @@ definicao: Planta herbacea que produz bulbos comestiveis, conhecida tambem como 
 categoria: Saude
 percentual: 3000
 vezes_subida: 31
-data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)
+data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)
 categoria_trends: comida e bebida
 buscas_dia_semana: 
 url_youtube: 
@@ -24,7 +24,7 @@ url_foto_materia:
   "categoria": "Saude",
   "percentual": "3000",
   "vezes_subida": "31",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
   "categoria_trends": "comida e bebida",
   "buscas_dia_semana": "",
   "url_youtube": "",
