Atualizar arquivo de post: gsi

--- a/posts/3 -- 2023-05-28-gsi.md
+++ b/posts/3 -- 2023-05-28-gsi.md
@@ -7,7 +7,7 @@ definicao: Sigla para Gabinete de Seguranca Institucional, orgao responsavel pel
 categoria: Politica
 percentual: 2400
 vezes_subida: 25
-data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)
+data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)
 categoria_trends: todas
 buscas_dia_semana: 
 url_youtube: 
@@ -24,7 +24,7 @@ url_foto_materia:
   "categoria": "Politica",
   "percentual": "2400",
   "vezes_subida": "25",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
