--- a/posts/3 -- 2023-05-28-bascula.md
+++ b/posts/3 -- 2023-05-28-bascula.md
@@ -7,7 +7,7 @@ definicao: Dispositivo mecanico utilizado para pesagem de objetos, composto por 
 categoria: Cultura
 percentual: 4500
 vezes_subida: 46
-data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)
+data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)
 categoria_trends: todas
 buscas_dia_semana: 19-05-2023: "10";
 20-05-2023: "20";
@@ -30,7 +30,7 @@ url_foto_materia:
   "categoria": "Cultura",
   "percentual": "4500",
   "vezes_subida": "46",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "19-05-2023: \"10\";\n20-05-2023: \"20\";\n21-05-2023: \"50\";\n22-05-2023: \"15\";\n23-05-2023: \"30\";\n24-05-2023: \"13\";\n25-05-2023: \"25\";",
   "url_youtube": "",
