--- a/posts/6 -2023-05-28-bascula.md
+++ b/posts/6 -2023-05-28-bascula.md
@@ -14,7 +14,7 @@ Conte?do: Dispositivo mecanico utilizado para pesagem de objetos, composto por d
   "categoria": "Cultura",
   "percentual": "4500",
   "vezes_subida": "46",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "19-05-2023: \"10\";\n20-05-2023: \"20\";\n21-05-2023: \"50\";\n22-05-2023: \"15\";\n23-05-2023: \"30\";\n24-05-2023: \"13\";\n25-05-2023: \"25\";",
   "url_youtube": "",
