--- a/posts/6 -2023-05-28-hoste.md
+++ b/posts/6 -2023-05-28-hoste.md
@@ -14,7 +14,7 @@ Conte?do: Tipo de acomodacao que oferece dormitorios compartilhados a precos ace
   "categoria": "Cultura",
   "percentual": "3550",
   "vezes_subida": "36.5",
-  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "viagem",
   "buscas_dia_semana": "19-05-2023: \"10\";\n20-05-2023: \"20\";\n21-05-2023: \"50\";\n22-05-2023: \"15\";\n23-05-2023: \"30\";\n24-05-2023: \"13\";\n25-05-2023: \"25\";",
   "url_youtube": "",
