Criar arquivo de post: capeba

--- a/posts/6 -2023-05-28-capeba.md
+++ b/posts/6 -2023-05-28-capeba.md
@@ -14,7 +14,7 @@ Conte?do: Planta herbacea que produz bulbos comestiveis, conhecida tambem como c
   "categoria": "Saude",
   "percentual": "3000",
   "vezes_subida": "31",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "comida e bebida",
   "buscas_dia_semana": "",
   "url_youtube": "",
