--- a/posts/6 -2023-05-28-sepsemia.md
+++ b/posts/6 -2023-05-28-sepsemia.md
@@ -14,7 +14,7 @@ Conte?do: Condicao grave de infeccao no organismo, caracterizada pela presenca d
   "categoria": "Saude",
   "percentual": "2500",
   "vezes_subida": "26",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
