--- a/posts/6 -2023-05-28-gsi.md
+++ b/posts/6 -2023-05-28-gsi.md
@@ -14,7 +14,7 @@ Conte?do: Sigla para Gabinete de Seguranca Institucional, orgao responsavel pela
   "categoria": "Politica",
   "percentual": "2400",
   "vezes_subida": "25",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
