Criar arquivo de post: tenia

--- a/posts/6 -2023-05-28-tenia.md
+++ b/posts/6 -2023-05-28-tenia.md
@@ -14,7 +14,7 @@ Conte?do: Tipo de parasita intestinal, popularmente conhecido como solitaria.
   "categoria": "Saude",
   "percentual": "2350",
   "vezes_subida": "24.5",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
