--- a/posts/6 -2023-05-28-cpmi.md
+++ b/posts/6 -2023-05-28-cpmi.md
@@ -14,7 +14,7 @@ Conte?do: Sigla para Comissao Parlamentar Mista de Inquerito, comissao formada p
   "categoria": "Politica",
   "percentual": "1950",
   "vezes_subida": "20.5",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
