--- a/posts/6 -2023-05-28-terafins.md
+++ b/posts/6 -2023-05-28-terafins.md
@@ -14,7 +14,7 @@ Conte?do: Seres angelicais que, segundo algumas tradicoes religiosas, ocupam uma
   "categoria": "Cultura",
   "percentual": "450",
   "vezes_subida": "5.5",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
