--- a/posts/6 -2023-05-28-pl-2630.md
+++ b/posts/6 -2023-05-28-pl-2630.md
@@ -14,7 +14,7 @@ Conte?do: Projeto de lei brasileiro que visa regulamentar a moderacao de conteud
   "categoria": "Politica",
   "percentual": "1450",
   "vezes_subida": "15.5",
-  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
