--- a/posts/6 -2023-05-28-taxa-selic.md
+++ b/posts/6 -2023-05-28-taxa-selic.md
@@ -14,7 +14,7 @@ Conte?do: Sigla para "Sistema Especial de Liquidacao e Custodia". E a taxa de ju
   "categoria": "Economia",
   "percentual": "550",
   "vezes_subida": "6.5",
-  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
