Criar arquivo de post: assexual

--- a/posts/6 -2023-05-28-assexual.md
+++ b/posts/6 -2023-05-28-assexual.md
@@ -14,7 +14,7 @@ Conte?do: Termo utilizado para descrever pessoas que nao tem atracao sexual por 
   "categoria": "Saude",
   "percentual": "650",
   "vezes_subida": "7.5",
-  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
