Criar arquivo de post: odometro

--- a/posts/6 -2023-05-28-odometro.md
+++ b/posts/6 -2023-05-28-odometro.md
@@ -14,7 +14,7 @@ Conte?do: Instrumento que mede a distancia percorrida por um veiculo. E comument
   "categoria": "Saude",
   "percentual": "700",
   "vezes_subida": "8",
-  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
+  "data_atualizacao": "Sun Apr 30 2023 00:00:00 GMT-0300 (Horario Padrao de Brasilia)",
   "categoria_trends": "todas",
   "buscas_dia_semana": "",
   "url_youtube": "",
