Atualizando arquivo pl 2630.md

--- a/posts/pl 2630.md
+++ b/posts/pl 2630.md
@@ -3,4 +3,4 @@ layout: post
 title: "pl 2630"
 categories: Política
 ---
-conteudo: Projeto de lei brasileiro que visa regulamentar a moderação de conteúdo nas redes sociais. Também conhecido como "Lei das Fake News".
+Projeto de lei brasileiro que visa regulamentar a moderação de conteúdo nas redes sociais. Também conhecido como "Lei das Fake News".
