--- a/posts/2023-05-28-cpmi.md
+++ b/posts/2023-05-28-cpmi.md
@@ -1,33 +1,6 @@
 ---
-id_semana: 1
-id_termo: 8
-status: novo
-termo: cpmi
-definicao: Sigla para Comissao Parlamentar Mista de Inquerito, comissao formada por deputados e senadores para investigacoes.
-categoria: Politica
-percentual: 1950
-vezes_subida: 20.5
-data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)
-categoria_trends: todas
-buscas_dia_semana: 
-url_youtube: 
-url_materia: 
-url_foto_materia: 
+layout: post
+title: "cpmi"
+categories: Política
 ---
-
-{
-  "id_semana": "1",
-  "id_termo": "8",
-  "status": "novo",
-  "termo": "cpmi",
-  "definicao": "Sigla para Comissao Parlamentar Mista de Inquerito, comissao formada por deputados e senadores para investigacoes.",
-  "categoria": "Politica",
-  "percentual": "1950",
-  "vezes_subida": "20.5",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
-  "categoria_trends": "todas",
-  "buscas_dia_semana": "",
-  "url_youtube": "",
-  "url_materia": "",
-  "url_foto_materia": ""
-}
+Sigla para Comissão Parlamentar Mista de Inquérito, comissão formada por deputados e senadores para investigações.
