--- a/posts/2023-05-28-tenia.md
+++ b/posts/2023-05-28-tenia.md
@@ -1,33 +1,6 @@
 ---
-id_semana: 1
-id_termo: 6
-status: novo
-termo: tenia
-definicao: Tipo de parasita intestinal, popularmente conhecido como solitaria.
-categoria: Saude
-percentual: 2350
-vezes_subida: 24.5
-data_atualizacao: Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)
-categoria_trends: todas
-buscas_dia_semana: 
-url_youtube: 
-url_materia: 
-url_foto_materia: 
+layout: post
+title: "tênia"
+categories: Saúde
 ---
-
-{
-  "id_semana": "1",
-  "id_termo": "6",
-  "status": "novo",
-  "termo": "tenia",
-  "definicao": "Tipo de parasita intestinal, popularmente conhecido como solitaria.",
-  "categoria": "Saude",
-  "percentual": "2350",
-  "vezes_subida": "24.5",
-  "data_atualizacao": "Sat Apr 22 2023 00:00:00 GMT-0300 (Brasilia Standard Time)",
-  "categoria_trends": "todas",
-  "buscas_dia_semana": "",
-  "url_youtube": "",
-  "url_materia": "",
-  "url_foto_materia": ""
-}
+Tipo de parasita intestinal, popularmente conhecido como solitária.
