Atualizando arquivo 2023-06-02-id-1-hostel.md

--- a/posts/2023-06-02-id-1-hostel.md
+++ b/posts/2023-06-02-id-1-hostel.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "hostel"
-categories: "Cultura"
-cor: "#FFCA3A"
-slag: "hostel"
+title: hostel
+categories: Cultura
+cor: #FFCA3A
+url_short: nan
+permalink: hostel
 ---
 Tipo de acomodação que oferece dormitórios compartilhados a preços acessíveis para viajantes. Também conhecido como albergue. nome
