Atualizando arquivo 2023-06-02-id-2-bascula.md

--- a/posts/2023-06-02-id-2-bascula.md
+++ b/posts/2023-06-02-id-2-bascula.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "bascula"
-categories: "Cultura"
-cor: "#FFCA3A"
-slag: "bascula"
+title: bascula
+categories: Cultura
+cor: #FFCA3A
+url_short: nan
+permalink: bascula
 ---
 Dispositivo mecânico utilizado para pesagem de objetos, composto por duas plataformas interligadas. TESTE
