--- a/posts/2023-06-02-id-3-capeba.md
+++ b/posts/2023-06-02-id-3-capeba.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "capeba"
-categories: "Saúde"
-cor: "#CCCCCC"
-slag: "capeba"
+title: capeba
+categories: Saúde
+cor: #CCCCCC
+url_short: nan
+permalink: capeba
 ---
 Planta herbácea que produz bulbos comestíveis, conhecida também como cebola-de-cabeça.
