Atualizando arquivo 2023-06-02-id-5-gsi.md

--- a/posts/2023-06-02-id-5-gsi.md
+++ b/posts/2023-06-02-id-5-gsi.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "gsi"
-categories: "Política"
-cor: "#CCCCCC"
-slag: "gsi"
+title: gsi
+categories: Política
+cor: #CCCCCC
+url_short: nan
+permalink: gsi
 ---
 Sigla para Gabinete de Segurança Institucional, órgão responsável pela segurança do presidente e do governo.
