Atualizando arquivo 2023-06-02-id-6-tenia.md

--- a/posts/2023-06-02-id-6-tenia.md
+++ b/posts/2023-06-02-id-6-tenia.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "tênia"
-categories: "Saúde"
-cor: "#CCCCCC"
-slag: "tênia"
+title: tênia
+categories: Saúde
+cor: #CCCCCC
+url_short: nan
+permalink: tênia
 ---
 Tipo de parasita intestinal, popularmente conhecido como solitária.
