Atualizando arquivo 2023-06-02-id-8-cpmi.md

--- a/posts/2023-06-02-id-8-cpmi.md
+++ b/posts/2023-06-02-id-8-cpmi.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "cpmi"
-categories: "Política"
-cor: "#CCCCCC"
-slag: "cpmi"
+title: cpmi
+categories: Política
+cor: #CCCCCC
+url_short: nan
+permalink: cpmi
 ---
 Sigla para Comissão Parlamentar Mista de Inquérito, comissão formada por deputados e senadores para investigações.
