Atualizando arquivo 2023-06-02-id-11-terafins.md

--- a/posts/2023-06-02-id-11-terafins.md
+++ b/posts/2023-06-02-id-11-terafins.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "terafins"
-categories: "Cultura"
-cor: "#FFCA3A"
-slag: "terafins"
+title: terafins
+categories: Cultura
+cor: #FFCA3A
+url_short: nan
+permalink: terafins
 ---
 Seres angelicais que, segundo algumas tradições religiosas, ocupam uma posição elevada na hierarquia divina.
