--- a/posts/2023-06-02-id-15-cpx.md
+++ b/posts/2023-06-02-id-15-cpx.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "cpx"
-categories: "Cultura"
-cor: "#FFCA3A"
-slag: "cpx"
+title: cpx
+categories: Cultura
+cor: #FFCA3A
+url_short: nan
+permalink: cpx
 ---
 CPX é a abreviação de Complexo, palavra utilizada para referir-se a comunidades do Rio de Janeiro, a exemplo do Complexo do Alemão, Complexo da Penha, Complexo Lemos de Brito, Complexo do São Carlos, dentre outros
