--- a/posts/2023-06-02-id-17-odometro.md
+++ b/posts/2023-06-02-id-17-odometro.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "odometro"
-categories: "Saúde"
-cor: "#CCCCCC"
-slag: "odometro"
+title: odometro
+categories: Saúde
+cor: #CCCCCC
+url_short: nan
+permalink: odometro
 ---
 Instrumento que mede a distância percorrida por um veículo. É comumente utilizado em automóveis para monitorar a quilometragem.
