--- a/posts/2023-06-02-id-18-assexual.md
+++ b/posts/2023-06-02-id-18-assexual.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title: "assexual"
-categories: "Saúde"
-cor: "#CCCCCC"
-slag: "assexual"
+title: assexual
+categories: Saúde
+cor: #CCCCCC
+url_short: nan
+permalink: assexual
 ---
 Termo utilizado para descrever pessoas que não têm atração sexual por nenhuma pessoa, independentemente do gênero ou da aparência física.
