Atualizando arquivo 2023-06-02-id-6-tenia.md

--- a/posts/2023-06-02-id-6-tenia.md
+++ b/posts/2023-06-02-id-6-tenia.md
@@ -4,6 +4,6 @@ title: tênia
 categories: Saúde
 cor: #CCCCCC
 url_short: nan
-permalink: tênia
+permalink: tenia
 ---
 Tipo de parasita intestinal, popularmente conhecido como solitária.
