Atualizando arquivo 2023-06-02-id-10-furcula.md

--- a/posts/2023-06-02-id-10-furcula.md
+++ b/posts/2023-06-02-id-10-furcula.md
@@ -4,6 +4,6 @@ title: fúrcula
 categories: Cultura
 cor: #FFCA3A
 url_short: nan
-permalink: fúrcula
+permalink: furcula
 ---
 Estrutura óssea em forma de "V" encontrada em aves e répteis, também conhecida como "osso da sorte".
