--- a/posts/2023-06-02-id-2-bascula.md
+++ b/posts/2023-06-02-id-2-bascula.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: bascula
+title: Bascula
 categories: Cultura
 cor: #FFCA3A
 url_short: nan
 permalink: bascula
 ---
-Dispositivo mecânico utilizado para pesagem de objetos, composto por duas plataformas interligadas. TESTE
+Uma bascula é um equipamento utilizado para medir e determinar o peso de objetos ou pessoas. Ela consiste em uma plataforma onde o objeto ou pessoa é colocado, e um visor que exibe a leitura do peso. As basculas são amplamente utilizadas em diversos setores, como na indústria, no comércio e na área da saúde, para realizar medições precisas de peso. São ferramentas essenciais em processos de pesagem e controle de qualidade.
