--- a/posts/2023-06-02-id-5-gsi.md
+++ b/posts/2023-06-02-id-5-gsi.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: gsi
+title: GSI
 categories: Política
 cor: #CCCCCC
 url_short: nan
 permalink: gsi
 ---
-Sigla para Gabinete de Segurança Institucional, órgão responsável pela segurança do presidente e do governo.
+GSI é a sigla para "Gabinete de Segurança Institucional", um órgão do governo responsável pela segurança e proteção de instituições. O GSI atua na prevenção e combate a ameaças internas e externas, coordena ações de inteligência e promove a segurança de autoridades e instalações estratégicas. Ele desempenha um papel fundamental na proteção da soberania nacional e na garantia da segurança do Estado.
