Atualizando arquivo 2023-06-02-id-10-furcula.md

--- a/posts/2023-06-02-id-10-furcula.md
+++ b/posts/2023-06-02-id-10-furcula.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: fúrcula
+title: Fúrcula
 categories: Cultura
 cor: #FFCA3A
 url_short: nan
 permalink: furcula
 ---
-Estrutura óssea em forma de "V" encontrada em aves e répteis, também conhecida como "osso da sorte".
+A fúrcula, também conhecida como "osso da sorte", é um osso em forma de "V" encontrado em algumas aves, como galinhas e pássaros. Ela representa um importante marco anatômico e é formada pela fusão das clavículas das aves. A fúrcula desempenha um papel crucial na movimentação das asas e na estabilidade durante o voo. Além disso, em algumas culturas, a fúrcula é considerada um objeto de sorte e pode ser usada como um talismã ou amuleto.
