--- a/posts/2023-06-02-id-1-hostel.md
+++ b/posts/2023-06-02-id-1-hostel.md
@@ -3,7 +3,7 @@ layout: post
 title: Hostel
 categories: Cultura
 cor: #FFCA3A
-url_short: nan
+url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: hostel
 ---
 Um hostel é um tipo de acomodação que oferece acomodações econômicas e compartilhadas, geralmente utilizadas por viajantes jovens. Neles, os hóspedes compartilham dormitórios ou quartos, o que permite um ambiente social e interação entre os viajantes. Os hostels também costumam oferecer áreas comuns, como cozinhas e salas de estar, criando um ambiente acolhedor e amigável para os hóspedes.
