--- a/posts/2023-06-02-id-3-capeba.md
+++ b/posts/2023-06-02-id-3-capeba.md
@@ -3,7 +3,7 @@ layout: post
 title: Capeba
 categories: Saúde
 cor: #CCCCCC
-url_short: nan
+url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: capeba
 ---
 A capeba, também conhecida como catinga-de-mulata, é uma planta medicinal com propriedades terapêuticas. Ela é utilizada popularmente para tratar problemas digestivos, como má digestão e azia, e inflamações no sistema respiratório, como bronquite e asma. Suas folhas são preparadas em forma de chá, que pode ser consumido para obter os benefícios medicinais da planta. A capeba é valorizada por suas propriedades curativas e seu uso na medicina tradicional.
