--- a/posts/2023-06-02-id-6-tenia.md
+++ b/posts/2023-06-02-id-6-tenia.md
@@ -3,7 +3,7 @@ layout: post
 title: Tênia
 categories: Saúde
 cor: #CCCCCC
-url_short: nan
+url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: tenia
 ---
 A tênia, popularmente conhecida como solitária, é um tipo de parasita intestinal que pode infectar seres humanos. Ela é transmitida principalmente pela ingestão de carne crua ou mal cozida contaminada com larvas de tênia. Uma vez dentro do intestino humano, a tênia se fixa às paredes intestinais e cresce, podendo causar sintomas como dor abdominal, perda de peso e fraqueza. O tratamento da infecção por tênia envolve medicamentos antiparasitários específicos.
