--- a/posts/2023-06-02-id-16-pl-2630.md
+++ b/posts/2023-06-02-id-16-pl-2630.md
@@ -3,7 +3,7 @@ layout: post
 title: pl 2630
 categories: Política
 cor: #CCCCCC
-url_short: nan
+url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: pl 2630
 ---
 Projeto de lei brasileiro que visa regulamentar a moderação de conteúdo nas redes sociais. Também conhecido como "Lei das Fake News".
