--- a/posts/2023-06-02-id-17-odometro.md
+++ b/posts/2023-06-02-id-17-odometro.md
@@ -3,7 +3,7 @@ layout: post
 title: odometro
 categories: Saúde
 cor: #CCCCCC
-url_short: nan
+url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: odometro
 ---
 Instrumento que mede a distância percorrida por um veículo. É comumente utilizado em automóveis para monitorar a quilometragem.
