--- a/posts/2023-06-02-id-18-assexual.md
+++ b/posts/2023-06-02-id-18-assexual.md
@@ -3,7 +3,7 @@ layout: post
 title: assexual
 categories: Saúde
 cor: #CCCCCC
-url_short: nan
+url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: assexual
 ---
 Termo utilizado para descrever pessoas que não têm atração sexual por nenhuma pessoa, independentemente do gênero ou da aparência física.
