Atualizando arquivo 2023-06-03-id-2-bascula.md

--- a/posts/2023-06-03-id-2-bascula.md
+++ b/posts/2023-06-03-id-2-bascula.md
@@ -2,7 +2,7 @@
 layout: post
 title: Bascula
 categories: Cultura
-classe_categoria: #ffca3a
+classe_categoria: cultura
 url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: bascula
 ---
