--- a/posts/2023-06-03-id-3-capeba.md
+++ b/posts/2023-06-03-id-3-capeba.md
@@ -2,7 +2,7 @@
 layout: post
 title: Capeba
 categories: Saúde
-classe_categoria: #cccccc
+classe_categoria: saude
 url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: capeba
 ---
