Atualizando arquivo 2023-06-03-id-5-gsi.md

--- a/posts/2023-06-03-id-5-gsi.md
+++ b/posts/2023-06-03-id-5-gsi.md
@@ -2,7 +2,7 @@
 layout: post
 title: GSI
 categories: Política
-classe_categoria: #cccccc
+classe_categoria: politica
 url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: gsi
 ---
