Atualizando arquivo 2023-06-03-id-6-tenia.md

--- a/posts/2023-06-03-id-6-tenia.md
+++ b/posts/2023-06-03-id-6-tenia.md
@@ -2,7 +2,7 @@
 layout: post
 title: Tênia
 categories: Saúde
-classe_categoria: #cccccc
+classe_categoria: saude
 url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: tenia
 ---
