--- a/posts/2023-06-03-id-8-cpmi.md
+++ b/posts/2023-06-03-id-8-cpmi.md
@@ -2,7 +2,7 @@
 layout: post
 title: CPMI
 categories: Política
-classe_categoria: #cccccc
+classe_categoria: politica
 url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: cpmi
 ---
