Atualizando arquivo 2023-06-03-id-16-pl-2630.md

--- a/posts/2023-06-03-id-16-pl-2630.md
+++ b/posts/2023-06-03-id-16-pl-2630.md
@@ -2,7 +2,7 @@
 layout: post
 title: pl 2630
 categories: Política
-classe_categoria: #cccccc
+classe_categoria: politica
 url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: pl-2630
 ---
