Atualizando arquivo 2023-06-05-id-22-xaxado.md

--- a/posts/2023-06-05-id-22-xaxado.md
+++ b/posts/2023-06-05-id-22-xaxado.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: xaxado
-categories: Cultura
-classe_categoria: cultura
+categories: Saúde
+classe_categoria: saude
 url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: xaxado
 ---
