--- a/posts/2023-06-05-id-26-rosbife.md
+++ b/posts/2023-06-05-id-26-rosbife.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: rosbife
-categories: Saúde
-classe_categoria: saude
+categories: Cultura
+classe_categoria: cultura
 url_short: https://www.youtube.com/embed/lTuuVsDiXUw
 permalink: rosbife
 ---
