Atualizando arquivo 2023-06-05-id-22-xaxado.md

--- a/posts/2023-06-05-id-22-xaxado.md
+++ b/posts/2023-06-05-id-22-xaxado.md
@@ -3,7 +3,7 @@ layout: post
 title: xaxado
 categories: Saúde
 classe_categoria: saude
-url_short: https://www.youtube.com/embed/lTuuVsDiXUw
+url_short: nan
 permalink: xaxado
 ---
 Um dos ritmos do forró, o xaxado surgiu em Pernambuco na segunda década do século 20. É possível que remonte aos cangaceiros e que tenha sido difundido pelo bando de Virgulino Ferreira, o Lampião.
