Atualizando arquivo 2023-06-05-id-26-rosbife.md

--- a/posts/2023-06-05-id-26-rosbife.md
+++ b/posts/2023-06-05-id-26-rosbife.md
@@ -3,7 +3,7 @@ layout: post
 title: rosbife
 categories: Saúde
 classe_categoria: saude
-url_short: https://www.youtube.com/embed/lTuuVsDiXUw
+url_short: nan
 permalink: rosbife
 ---
 Corte de carne bovina (contrafilé ou lagarto) assado no forno, para posteriormente ser fatiado e usado em diferentes pratos da culinária. O Roast Beef na Europa, particularmente na Inglaterra, está associado ao prato principal do domingo.
