--- a/posts/2023-06-05-id-40-pmma.md
+++ b/posts/2023-06-05-id-40-pmma.md
@@ -3,7 +3,7 @@ layout: post
 title: pmma
 categories: Saúde
 classe_categoria: saude
-url_short: https://www.youtube.com/embed/lTuuVsDiXUw
+url_short: nan
 permalink: pmma
 ---
 O PMMA, ou polimetilmetacrilato, é uma substância plástica na forma de microesferas que normalmente é indicada para corrigir pequenas deformidades ou a perda da gordura facial em pessoas com HIV, não sendo recomendada pela Sociedade Brasileira de Cirurgia Plástica para tratamentos estéticos.
